added-link-for-ios-contact

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<img src="img/logo.png" alt="Logo" class="logo">
 				<div class="info-content">
 					<span class="label">Add To Contacts</span><br>
-					<span class="content" id="add-to-contacts"></span>
+					<span class="content" id="add-to-contacts"><a href="#" target="_blank"></a></span>
 				</div>
 			</div>
 		</div>
