added-link-for-ios-contact-fix-3

--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
 				</div>
 			</div>
 		</div>
+		<div class="info" id="info8">
+			<div class="container-element">
+				<img src="img/logo.png" alt="Logo" class="logo">
+				<div class="info-content">
+					<span class="label">test</span><br>
+					<span class="content" id="test"><a href="tel:0123456789" target="_blank"></a></span>
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
