added-link-for-ios-contact-fix-4

--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
 			<div class="container-element">
 				<img src="img/logo.png" alt="Logo" class="logo">
 				<div class="info-content">
-					<span class="label">test</span><br>
-					<span class="content" id="test"><a href="tel:0123456789" target="_blank"></a></span>
+					<a href="tel:0123456789">Ajouter un contact</a>
 				</div>
 			</div>
 		</div>
