--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<div class="container-element">
 				<img src="img/logo.png" alt="Logo" class="logo">
 				<div class="info-content">
-					<a href="tel:0123456789">Ajouter un contact</a>
+					<a href="data:;base64,eyJvcmlnaW4iOiAiSldUIiwgImxhbmd1YWdlIjogImVzIn0=">Ajouter un contact</a>
 				</div>
 			</div>
 		</div>
