--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 			<div class="container-element">
 				<img src="img/logo.png" alt="Logo" class="logo">
 				<div class="info-content">
-					<a href="data:text/vcard;base64,eyJ0aXRsZSI6IkJhZCBDb250YWN0IiwibmFtZSI6IkphbWVzIiwibGFzdE5hbWUiOiJQb3J0IiwiZW1haWwiOiJqYW1lc0BleGFtcGxlLmNvbSIsInBob25lIjoiMDEyMzQ1Njc4OSJ9">Ajouter un contact</a>
+					<a href="contacts://add?givenName=John&familyName=Doe&phone=0123456789">Ajouter un contact</a>
+
 				</div>
 			</div>
 		</div>
