--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 			<div class="container-element">
 				<img src="img/logo.png" alt="Logo" class="logo">
 				<div class="info-content">
-					<a href="contacts://add?givenName=John&familyName=Doe&phone=0123456789">Ajouter un contact</a>
+					<a href="web+contacts://&quot;Add%20To%20Contacts&quot;:URL&amp;firstName=Charles&amp;lastName=McKenna&amp;phone=%2B15813723545&amp;email=mckenna.charles%40hotmail.com">Ajouter un contact</a>
+
 
 				</div>
 			</div>
