added-link-for-ios-contact-fix-9

--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
 				<div class="info-content">
 					<a href="web+contacts://&quot;Add%20To%20Contacts&quot;:URL&amp;firstName=Charles&amp;lastName=McKenna&amp;phone=%2B15813723545&amp;email=mckenna.charles%40hotmail.com">Ajouter un contact</a>
 
+					<a href="data:text/x-vcard;utf-8,%EF%BB%BFBEGIN%3AVCARD%0AVERSION%3A3.0%0AN%3AMcKenna%3BCharles%0AFN%3ACharles%20McKenna%0ATEL%3A%2B15813723545%0AEMAIL%3Amckenna.charles%40hotmail.com%0AURL%3Ahttps%3A%2F%2Ftacarte.ca%2F%23%0ATITLE%3ADirecteur%20Marketing%20et%20Service%20Client%0AORG%3ATa%20Carte%0AEND%3AVCARD">Ajouter un contact</a>
+
+					<a href="data:text/vcard;charset=utf-8,%EF%BB%BFBEGIN%3AVCARD%0AVERSION%3A3.0%0AN%3ALastName%3BFirstName%0ATEL%3A%2B15813723545%0AEMAIL%3Amckenna.charles%40hotmail.com%0AURL%3Ahttps%3A%2F%2Ftacarte.ca%2F%23%0ATITLE%3ADirecteur%20Marketing%20et%20Service%20Client%0AORG%3ATa%20Carte%0AEND%3AVCARD">Ajouter un contact</a>
 
 				</div>
 			</div>
