--- a/test.html
+++ b/test.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ouvrir les coordonnées</title>
+    <title>Lien vCard</title>
 </head>
 <body>
-  <a href="data:text/vcard;charset=utf-8;base64,BEGIN%3AVCARD%0AVERSION%3A3.0%0AFN%3AJohn%20Doe%0ATEL%3BTYPE%3DCELL%3A123456789%0AEMAIL%3Ajohn.doe%40example.com%0AADR%3BTYPE%3DHOME%3A123%20Main%20Street%2C%20City%2C%20Country%0AEND%3AVCARD">
-    Ouvrir les coordonnées
-  </a>
+    <h1>Lien vCard</h1>
+    <a href="exemple.vcf">Télécharger ma carte de visite</a>
 </body>
 </html>
