added-link-for-ios-contact-fix-10

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 			<div class="container-element">
 				<img src="img/logo.png" alt="Logo" class="logo">
 				<div class="info-content">
-					<span class="label">Add To Contacts</span><br>
-					<span class="content" id="add-to-contacts"></span>
+					<span class="label"><a href="exemple.vcf" target="_blank">Add To Contacts</a></span><br>
 				</div>
 			</div>
 		</div>
