--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 	<div class="container">
 		<div class="info" id="info1">
 			<div class="container-element">
-				<img src="img/logo.png" alt="Logo" class="logo">
+				<img src="img/email.png" alt="Logo" class="logo">
 				<div class="info-content">
 					<span class="label">Email us</span><br>
-					<span class="content" id="email"></span>
+					<span class="content"><a href="#" id="email-link"></a></span>
 				</div>
 			</div>
 		</div>
 		<div class="info" id="info2">
 			<div class="container-element">
-				<img src="img/logo.png" alt="Logo" class="logo">
+				<img src="img/contact.png" alt="Logo" class="logo">
 				<div class="info-content">
 					<span class="label"><a href="exemple.vcf" target="_blank">Add To Contacts</a></span><br>
 				</div>
@@ -26,16 +26,16 @@
 		</div>
 		<div class="info" id="info3">
 			<div class="container-element">
-				<img src="img/logo.png" alt="Logo" class="logo">
+				<img src="img/telephone.jpeg" alt="Logo" class="logo">
 				<div class="info-content">
 					<span class="label">Call now</span><br>
-					<span class="content" id="call-now"></span>
+					<span class="content" id="call-now"><a href="#" id="call-now-link"></a></span>
 				</div>
 			</div>
 		</div>
 		<div class="info" id="info4">
 			<div class="container-element">
-				<img src="img/logo.png" alt="Logo" class="logo">
+				<img src="img/clock.png" alt="Logo" class="logo">
 				<div class="info-content">
 					<span class="label">Hours of operation</span><br>
 					<span class="content" id="hours-of-operation"></span>
@@ -44,7 +44,7 @@
 		</div>
 		<div class="info" id="info5">
 			<div class="container-element">
-				<img src="img/logo.png" alt="Logo" class="logo">
+				<img src="img/facebook.png" alt="Logo" class="logo">
 				<div class="info-content">
 					<span class="label">Facebook</span><br>
 					<span class="content" id="facebook"><a href="#" target="_blank"></a></span>
@@ -53,16 +53,16 @@
 		</div>
 		<div class="info" id="info6">
 			<div class="container-element">
-				<img src="img/logo.png" alt="Logo" class="logo">
+				<img src="img/instagram.png" alt="Logo" class="logo">
 				<div class="info-content">
 					<span class="label">Instagram</span><br>
 					<span class="content" id="instagram"><a href="#" target="_blank"></a></span>
 				</div>
 			</div>
 		</div>
-		<div class="info" id="info7">
+		<div class="info-last" id="info7">
 			<div class="container-element">
-				<img src="img/logo.png" alt="Logo" class="logo">
+				<img src="img/website.png" alt="Logo" class="logo">
 				<div class="info-content">
 					<span class="label">Website</span><br>
 					<span class="content" id="website"><a href="#" target="_blank"></a></span>
