my-personnal-link

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Carte d'affaires NFC</title>
+	<title>Yanis Labbé</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script src="js/script.js"></script>
 </head>
@@ -20,7 +20,7 @@
 			<div class="container-element">
 				<img src="img/contact.png" alt="Logo" class="logo">
 				<div class="info-content">
-					<span class="label"><a href="exemple.vcf" target="_blank">Add To Contacts</a></span><br>
+					<span class="label"><a href="yanislabbe.vcf" target="_blank">Add To Contacts</a></span><br>
 				</div>
 			</div>
 		</div>
