--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<script src="js/script.js"></script>
 </head>
 <body>
+	<div class="profile-picture">
+		<img src="img/profile_picture.jpeg" alt="Profile Picture" class="profile-img">
+	</div>
 	<div class="container">
 		<div class="info" id="info1">
 			<div class="container-element">
