--- a/charlesmckenna.html
+++ b/charlesmckenna.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Yanis Labbé</title>
+	<title>Charles McKenna</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<script src="js/script.js"></script>
+	<script src="js/script-charles-mckenna.js"></script>
 </head>
 <body>
 	<div class="profile-picture">
-		<img src="img/profile_picture.jpeg" alt="Profile Picture" class="profile-img">
+		<img src="img/no-profile-picture.svg" alt="Profile Picture" class="profile-img">
 	</div>
 	<div class="container">
 		<div class="info" id="info1">
@@ -24,7 +24,7 @@
 			<div class="container-element">
 				<img src="img/contact.png" alt="contact" class="logo">
 				<div class="info-content">
-					<span class="label"><a href="vcf/yanislabbe.vcf" target="_blank">Add To Contacts</a></span><br>
+					<span class="label"><a href="vcf/charlesmckenna.vcf" target="_blank">Add To Contacts</a></span><br>
 				</div>
 			</div>
 		</div>
