--- a/test.html
+++ b/test.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Charles McKenna</title>
+	<title>Test</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="css/charlesmckenna.css">
-	<script src="js/script-charles-mckenna.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/test.css">
 </head>
 <body>
-	<div class="profile-picture">
-		<img src="img/no-profile-picture.svg" alt="Profile Picture" class="profile-img">
-	</div>
+	<div id="carte-affaires"></div>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+	<script src="js/tacarte.js"></script>
+	<script src="js/script.js"></script>
 	<div class="container">
 		<div class="info" id="info1">
 			<div class="container-element">
@@ -24,7 +24,7 @@
 			<div class="container-element">
 				<img src="img/contact.png" alt="contact" class="logo">
 				<div class="info-content">
-					<span class="label"><a href="vcf/charlesmckenna.vcf" target="_blank">Add To Contacts</a></span><br>
+					<span class="label"><a href="vcf/yanislabbe.vcf" target="_blank">Add To Contacts</a></span><br>
 				</div>
 			</div>
 		</div>
